--- a/index.html
+++ b/index.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spotify</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="utility.css">
 </head>
 <body>
+    <div class="top-nav border-red"> 
+        <!-- <p>hello iam the navbar</p> -->
+        <img src="logo.svg" alt="">
+    </div>
+
+    <div class="container">
+
+    <div class="left ">
+
+        <div class="left-container">
+            <p>Your Library</p> 
+           <img src="plus-icon.svg" alt="plus-icon" height="20px" width="20px">
+        </div>
+
+        <div class="inner-card ">
+            <h3>Create your first playlist</h3>
+            <p>It's easy we'll help you!</p>
+            <button>Create playlist</button>
+        </div>
+
+        <div class="inner-card ">
+            <h3>Let's find some poscasts to follow</h3>
+            <p>We'll keep you updated on new episodes</p>
+            <button>Browse podcasts</button>
+        </div>
+
+        <div class="pages">
+            <ul class="pages-list">
+                <li><a href="#">Legal</a></li>
+                <li><a href="#">Safety & Privacy center</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">cookies</a></li>
+                <li><a href="#">about ads</a></li>
+                <li><a href="#">Accessibility</a></li>
+            </ul>
+        </div>
+        <div class="language-btn">
+            <button>English</button>
+        </div>
+
+    </div>
+    <div class="right border-black">right</div>
+    </div>
+
+    <div class="footer border-green">footer</div>
+
     
 </body>
 </html>
