left bar completed

--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
     <div class="left ">
 
         <div class="left-container">
-            <p>Your Library</p> 
+            <h3>Your Library</h3> 
            <img src="plus-icon.svg" alt="plus-icon" height="20px" width="20px">
         </div>
 
         <div class="inner-card ">
             <h3>Create your first playlist</h3>
-            <p>It's easy we'll help you!</p>
-            <button>Create playlist</button>
+            <p class="font-14">It's easy we'll help you!</p>
+            <button class="left-btn">Create playlist</button>
         </div>
 
         <div class="inner-card ">
-            <h3>Let's find some poscasts to follow</h3>
-            <p>We'll keep you updated on new episodes</p>
-            <button>Browse podcasts</button>
+            <h3>Let's find some podcasts to follow</h3>
+            <p class="font-14">We'll keep you updated on new episodes</p>
+            <button class="left-btn">Browse podcasts</button>
         </div>
 
         <div class="pages">
@@ -45,7 +45,10 @@
             </ul>
         </div>
         <div class="language-btn">
-            <button>English</button>
+        <button class="lang-btn">
+            <img src="globe.svg" alt="globe">
+            English
+          </button>
         </div>
 
     </div>
