adder bottom bar

--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
     <div class="right border-black">right</div>
     </div>
 
-    <div class="footer border-green">footer</div>
+    <div class="footer">
+        <div>
+            <p class="font-14">Preview of Spotify</p>
+            <p class="font-16">Sign up to get unlimited songs and podcasts with occasional ads. No credit card needed</p>
+        </div>
+        <div>
+            <button>Sign up free</button>
+        </div>
+    </div>
 
     
 </body>
