--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="pages">
             <ul class="pages-list">
-                <li><a href="#">Legal</a></li>
+                <li><a href="google.com">Legal</a></li>
                 <li><a href="#">Safety & Privacy center</a></li>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">cookies</a></li>
