finished half navbar

--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
     <link rel="stylesheet" href="utility.css">
 </head>
 <body>
-    <div class="top-nav border-red"> 
-        <!-- <p>hello iam the navbar</p> -->
-        <img src="logo.svg" alt="">
+    <div class="top-nav flex">
+        <div class="flex"> 
+        <img src="logo.svg" alt="logo" id="logo">
+        <img src="nav-home-icon.svg" alt="nav-home-icon" id="home-icon" tabindex="0">
+        <input type="text" placeholder="what do you want to play? " id="search-plc">
+        </div>
+
+        <div class="right-nav-links flex">
+            <a href="">Premium </a>
+            <a href="">Support</a>
+            <a href="">Download</a>
+            <p>|</p>
+            <a href=""><div>install app</div>
+            <a href="#">Signup</a>
+            <button>Login</button>
+            
+        </div>
     </div>
 
     <div class="container">
