finished top navigation

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
             <a href="">Premium </a>
             <a href="">Support</a>
             <a href="">Download</a>
-            <p>|</p>
-            <a href=""><div>install app</div>
-            <a href="#">Signup</a>
-            <button>Login</button>
-            
+            <a href="#">|</a>
+            <a href=""><div>Install app</div>
+            <a href="#">Signup</a> 
         </div>
+        <button class="flex login-btn">Log In</button>
+
+        
     </div>
 
     <div class="container">
@@ -66,8 +67,21 @@
         </div>
 
     </div>
-    <div class="right border-black">right</div>
+    <div class="right"></div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <div class="footer">
         <div>
