added songs section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Spotify</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
+    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
 </head>
 <body>
     <div class="top-nav flex">
@@ -67,7 +68,141 @@
         </div>
 
     </div>
-    <div class="right"></div>
+
+
+
+
+    <div class="right">
+        <div class="audio-card-container" class="flex">
+            <p id="trending-songs">Trending songs</p>
+            <div class="audio-card">
+
+                <div class="card">
+                    <div class="play">
+                            <svg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" style="display:block">
+                            <circle cx="40" cy="40" r="40" fill="#4CAF50" />
+                            <polygon points="32,24 56,40 32,56" fill="black" />
+                            </svg> 
+                    </div>
+                    <img src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" alt="">
+                    <h3>Finding her</h3>
+                    <p >Kushagra, Bhrath , Saheel</p>
+                </div>
+                <div class="card">
+                    <div class="play">
+                            <svg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" style="display:block">
+                            <circle cx="40" cy="40" r="40" fill="#4CAF50" />
+                            <polygon points="32,24 56,40 32,56" fill="black" />
+                            </svg> 
+                    </div>
+                    <img src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" alt="">
+                    <h3>Finding her</h3>
+                    <p >Kushagra, Bhrath , Saheel</p>
+                </div>
+                <div class="card">
+                    <div class="play">
+                            <svg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" style="display:block">
+                            <circle cx="40" cy="40" r="40" fill="#4CAF50" />
+                            <polygon points="32,24 56,40 32,56" fill="black" />
+                            </svg> 
+                    </div>
+                    <img src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" alt="">
+                    <h3>Finding her</h3>
+                    <p >Kushagra, Bhrath , Saheel</p>
+                </div>
+                <div class="card">
+                    <div class="play">
+                            <svg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" style="display:block">
+                            <circle cx="40" cy="40" r="40" fill="#4CAF50" />
+                            <polygon points="32,24 56,40 32,56" fill="black" />
+                            </svg> 
+                    </div>
+                    <img src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" alt="">
+                    <h3>Finding her</h3>
+                    <p >Kushagra, Bhrath , Saheel</p>
+                </div>
+                <div class="card">
+                    <div class="play">
+                            <svg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" style="display:block">
+                            <circle cx="40" cy="40" r="40" fill="#4CAF50" />
+                            <polygon points="32,24 56,40 32,56" fill="black" />
+                            </svg> 
+                    </div>
+                    <img src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" alt="">
+                    <h3>Finding her</h3>
+                    <p >Kushagra, Bhrath , Saheel</p>
+                </div>
+                <div class="card">
+                    <div class="play">
+                            <svg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" style="display:block">
+                            <circle cx="40" cy="40" r="40" fill="#4CAF50" />
+                            <polygon points="32,24 56,40 32,56" fill="black" />
+                            </svg> 
+                    </div>
+                    <img src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" alt="">
+                    <h3>Finding her</h3>
+                    <p >Kushagra, Bhrath , Saheel</p>
+                </div>
+                <div class="card">
+                    <div class="play">
+                            <svg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" style="display:block">
+                            <circle cx="40" cy="40" r="40" fill="#4CAF50" />
+                            <polygon points="32,24 56,40 32,56" fill="black" />
+                            </svg> 
+                    </div>
+                    <img src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" alt="">
+                    <h3>Finding her</h3>
+                    <p >Kushagra, Bhrath , Saheel</p>
+                </div>
+                <div class="card">
+                    <div class="play">
+                            <svg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" style="display:block">
+                            <circle cx="40" cy="40" r="40" fill="#4CAF50" />
+                            <polygon points="32,24 56,40 32,56" fill="black" />
+                            </svg> 
+                    </div>
+                    <img src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" alt="">
+                    <h3>Finding her</h3>
+                    <p >Kushagra, Bhrath , Saheel</p>
+                </div>
+                <div class="card">
+                    <div class="play">
+                            <svg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" style="display:block">
+                            <circle cx="40" cy="40" r="40" fill="#4CAF50" />
+                            <polygon points="32,24 56,40 32,56" fill="black" />
+                            </svg> 
+                    </div>
+                    <img src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" alt="">
+                    <h3>Finding her</h3>
+                    <p >Kushagra, Bhrath , Saheel</p>
+                </div>
+                <div class="card">
+                    <div class="play">
+                            <svg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" style="display:block">
+                            <circle cx="40" cy="40" r="40" fill="#4CAF50" />
+                            <polygon points="32,24 56,40 32,56" fill="black" />
+                            </svg> 
+                    </div>
+                    <img src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" alt="">
+                    <h3>Finding her</h3>
+                    <p >Kushagra, Bhrath , Saheel</p>
+                </div>
+                <div class="card">
+                    <div class="play">
+                            <svg viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" style="display:block">
+                            <circle cx="40" cy="40" r="40" fill="#4CAF50" />
+                            <polygon points="32,24 56,40 32,56" fill="black" />
+                            </svg> 
+                    </div>
+                    <img src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" alt="">
+                    <h3>Finding her</h3>
+                    <p >Kushagra, Bhrath , Saheel</p>
+                </div>
+                
+                
+            </div>
+        </div>
+    </div>
     </div>
 
 
