--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="top-nav flex">
         <div class="flex"> 
-        <img src="logo.svg" alt="logo" id="logo">
-        <img src="nav-home-icon.svg" alt="nav-home-icon" id="home-icon" tabindex="0">
+        <img src="public/logo.svg" alt="logo" id="logo">
+        <img src="public/nav-home-icon.svg" alt="nav-home-icon" id="home-icon" tabindex="0">
         <input type="text" placeholder="what do you want to play? " id="search-plc">
         </div>
 
@@ -35,7 +35,7 @@
 
         <div class="left-container">
             <h3>Your Library</h3> 
-           <img src="plus-icon.svg" alt="plus-icon" height="20px" width="20px">
+           <img src="public/plus-icon.svg" alt="plus-icon" height="20px" width="20px">
         </div>
 
         <div class="inner-card ">
@@ -62,7 +62,7 @@
         </div>
         <div class="language-btn">
         <button class="lang-btn">
-            <img src="globe.svg" alt="globe">
+            <img src="public/globe.svg" alt="globe">
             English
           </button>
         </div>
