--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Spotify</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
-    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="public/favicon.svg" type="image/x-icon">
 </head>
 <body>
     <div class="top-nav flex">
