--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                             </svg> 
                     </div>
                     <img src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" alt="">
-                    <h3>Finding her</h3>
-                    <p >Kushagra, Bhrath , Saheel</p>
+                    <h3 id="test"></h3>
+                    <p >Guru Randhava</p>
                 </div>
                 <div class="card">
                     <div class="play">
@@ -207,8 +207,24 @@
             
         </div>
     </div>
-    <div class="musiccontrols">player controls</div>
-</div>
+
+    <div class="musiccontrols flex">
+        <div class="songinfo">
+            song info 
+        </div>
+
+        <div class="control-container flex">
+            <img src="public/prev.svg" alt="">
+            <img src="public/play.svg" alt="">
+            <img src="public/next.svg" alt="">
+        </div>
+
+        <div class="songtime">
+          song time
+        </div>
+    </div>
+    
+    </div>
 
     </div>
 
